[gd_scene load_steps=4 format=3 uid="uid://c5750kdm4ov32"]

[ext_resource type="Script" uid="uid://pgswxu2v6fh2" path="res://cadeau.gd" id="1_ohqo5"]
[ext_resource type="FontFile" uid="uid://c018jvqwk1xf8" path="res://assets/the moon game /brackeys_platformer_assets/fonts/PixelOperator8.ttf" id="2_ifbxt"]
[ext_resource type="Texture2D" uid="uid://bfevlilxf5vny" path="res://QRCODESTRUDEL.png" id="3_ifbxt"]

[node name="cadeau" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_ohqo5")

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color(0.023529412, 0.06666667, 0.22352941, 1)
show_behind_parent = true
layout_mode = 0
offset_left = -2189.0
offset_top = -999.0
offset_right = 2874.0
offset_bottom = 1658.0
scale = Vector2(0.9996128, 0.9902117)

[node name="text" type="Label" parent="."]
layout_mode = 0
offset_left = 216.0
offset_top = 43.0
offset_right = 1467.0
offset_bottom = 299.0
scale = Vector2(0.6458999, 0.68)
theme_override_colors/font_color = Color(1, 0.9490196, 0.69411767, 1)
theme_override_fonts/font = ExtResource("2_ifbxt")
theme_override_font_sizes/font_size = 33
text = "You did it.
All stars collected.

This is the live code behind
\"Lise Me Alone\".
Copy it. Paste it in Strudel. Run it. Break it."
horizontal_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
position = Vector2(1013, 137.00003)
scale = Vector2(0.1790326, 0.1541256)
texture = ExtResource("3_ifbxt")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 128.0
offset_top = 236.0
offset_right = 1128.0
offset_bottom = 736.0
scale = Vector2(0.98153746, 0.7910847)

[node name="code_box" type="TextEdit" parent="HBoxContainer"]
custom_minimum_size = Vector2(500, 500)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "// LISE ME ALONE
setCps(115/60/4)
let chordsVerse = chord(\"<Em@7 C@9 Em7@7 C@9>*8\")

//DRUMS
$:s(\"bd:2!4\").bank(\"tr909\").gain(\"0.5\").hpf(\"25\").duckorbit(\"1\").duckdepth(\"0.3\").duckattack(\"0.005\")
$:s(\"lt\").n(\"12\").beat(\"5, 13, 15\",16).slow(2).hpf(\"200\").bank(\"yamaharm50\").room(\"0.5\").distort(\"0.3\").lpf(\"8000\")
$:arrange([1, s(\"hh:15!16\")],[6, s(\"hh:15!16\").struct(\"<x [x x] x x [x x] [x x] x x>\").fast(8)]).room(0.1).hpf(\"6000\").dec(tri.range(0.1, 1)).distort(\"0.3\").o(1).mask(\"<0!7 1!16 0!2 1!32>\")._pianoroll()

//CHORDS
$:chordsVerse.voicing().spread(1.5).s(\"supersaw\").lpf(saw.rangex(2000,5000)).tremolophase(\".25 .66\").pan(sine.slow(2)).color(\"red\").pianoroll().gain(\"0.2\").hpf(\"200\").room(\"0.8\").roomsize(3).dec(1.5).fm(1).delay(0.2).o(1)
$:note(\"<b4@7 c5@7 d5 b4 d5@7 c5@9>*8\").lpattack(0.1).lpdecay(.8).gain(\"0.4\").s(\"supersaw\").lpf(\"2000@2  1000\").o(1)

//BASS
$:note(\"e2\").struct(\"<- x>*8\").s(\"saw\").lpf(\"300\").diode(0.5).o(0).mask(\"<0!8 1!16>\")

//ARP
$:n(\"<- 1 0 2 1 0 -1 -2>*8\".add(7)).set(chordsVerse).voicing().s(\"supersaw\").lpf(\"3000@3  1000\").dec(\"0.4\").attack(\"0.05\").delay(\"0.2\").gain(0.5).o(1).pan(\"<0 1>\").mask(\"<0!12 1!16>\")

//ARP2
$:n(\"< - 0 1 0 2 1 3 2 3 >*16\".add(\"<0 0 7 14>*4\")).set(chordsVerse).voicing().s(\"saw\").lpf((\"2000 5000\")).gain(\"0.5\").penv(\"0.2 0.3\").jux(rev).mask(\"<0!16 1!12>\").o(1)
$:n(\"< 0 2 1 3 >*16\".add(\"<0 7>*8\")).set(chordsVerse).voicing().s(\"sawtooth\").gain(\"0.5\").mask(\"<0!16 1!12>\").o(1)"
editable = false
scroll_smooth = true

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 35
alignment = 1

[node name="victory_label" type="Label" parent="HBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "

"

[node name="separator2" type="Control" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="copy_button" type="Button" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ifbxt")
theme_override_font_sizes/font_size = 24
text = "COPY CODE"

[node name="separator3" type="Control" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="keep_playing_button" type="Button" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
size_flags_stretch_ratio = 2.1
theme_override_colors/icon_normal_color = Color(1, 0.9529412, 1, 0.4)
theme_override_fonts/font = ExtResource("2_ifbxt")
theme_override_font_sizes/font_size = 24
text = "KEEP PLAYING"

[node name="separator4" type="Control" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="exit_button" type="Button" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ifbxt")
theme_override_font_sizes/font_size = 24
text = "EXIT GAME"
