extends Control

@onready var keep_playing_button: Button = $HBoxContainer/VBoxContainer/keep_playing_button
@onready var exit_button: Button = $HBoxContainer/VBoxContainer/exit_button
@onready var copy_button: Button = $HBoxContainer/VBoxContainer/copy_button
@onready var code_box: TextEdit = $HBoxContainer/code_box
@onready var text_label: Label = $text

func _ready():
	print("ğŸ PAGE CADEAU CHARGÃ‰E!")
	print("ğŸ” Script cadeau._ready() appelÃ©")
	
	# VÃ©rification de sÃ©curitÃ©
	if not text_label:
		push_error("âŒ text_label n'est pas trouvÃ©!")
	if not keep_playing_button or not exit_button or not copy_button:
		push_error("âŒ Un des boutons n'est pas trouvÃ©!")
		return
	if not code_box:
		push_error("âŒ code_box n'est pas trouvÃ©!")
		return
	
	print("âœ… Tous les nÅ“uds trouvÃ©s!")
	
	# Connexions boutons
	keep_playing_button.pressed.connect(on_keep_playing_pressed)
	exit_button.pressed.connect(on_exit_pressed)
	copy_button.pressed.connect(on_copy_pressed)
	
	print("âœ… Boutons connectÃ©s!")
	
	# Configuration code box
	code_box.editable = false
	code_box.selecting_enabled = true  # ChangÃ© de selectable Ã  selecting_enabled
	
	print("ğŸ” Contenu du code_box: '", code_box.text, "'")
	print("ğŸ“ Longueur: ", code_box.text.length(), " caractÃ¨res")

func on_copy_pressed() -> void:
	print("ğŸ–±ï¸ ========== BOUTON COPY CLIQUÃ‰! ==========")
	
	if code_box and code_box.text != "":
		var code_to_copy = code_box.text
		print("ğŸ“ Texte Ã  copier: '", code_to_copy, "'")
		print("ğŸ“ Longueur: ", code_to_copy.length(), " caractÃ¨res")
		
		# Copie dans le presse-papier
		DisplayServer.clipboard_set(code_to_copy)
		print("âœ… DisplayServer.clipboard_set() appelÃ©")
		
		# VÃ©rification
		await get_tree().create_timer(0.1).timeout
		
		var clipboard_content = DisplayServer.clipboard_get()
		print("ğŸ“‹ Contenu du presse-papier: '", clipboard_content, "'")
		
		if clipboard_content == code_to_copy:
			print("âœ…âœ…âœ… COPIE RÃ‰USSIE!")
			copy_button.text = "âœ“ Copied!"
		else:
			print("âš ï¸ Copie Ã©chouÃ©e, sÃ©lection du texte")
			copy_button.text = "Press Ctrl+C"
			code_box.select_all()
	else:
		print("âš ï¸ code_box vide ou null!")

func on_keep_playing_pressed() -> void:
	print("ğŸ® Retour au jeu...")
	Global.lives = Global.max_lives
	get_tree().change_scene_to_file("res://scenes/game.tscn")

func on_exit_pressed() -> void:
	print("ğŸ‘‹ Fermeture du jeu...")
	get_tree().quit()
